Fix for wiki button not working on mobile
* Seems that button requires a z-layout to ensure its the top-most
  component

* Updates README and TODO

--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -24,6 +24,7 @@ $app-right-margin: 2vh;
   background-color: white;
   border: none;
   box-shadow: $tile-shadow;
+  z-index: 1000;
 
   img {
     width: 1.5em;
